tests/ui/rfcs/rfc-2632-const-trait-impl/const-impl-trait.stderr
error[E0277]: can't compare `()` with `()`
  --> $DIR/const-impl-trait.rs:35:17
   |
LL |     assert!(cmp(&()));
   |             --- ^^^ no implementation for `() == ()`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `const PartialEq` is not implemented for `()`
   = help: the trait `PartialEq` is implemented for `()`
note: required by a bound in `cmp`
  --> $DIR/const-impl-trait.rs:12:23
   |
LL | const fn cmp(a: &impl ~const PartialEq) -> bool {
   |                       ^^^^^^^^^^^^^^^^ required by this bound in `cmp`

error[E0277]: can't compare `&impl ~const PartialEq` with `&impl ~const PartialEq`
  --> $DIR/const-impl-trait.rs:13:7
   |
LL |     a == a
   |       ^^ no implementation for `&impl ~const PartialEq == &impl ~const PartialEq`
   |
   = help: the trait `~const PartialEq<&impl ~const PartialEq>` is not implemented for `&impl ~const PartialEq`
help: consider dereferencing both sides of the expression
   |
LL |     *a == *a
   |     +     +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
